--- a/Styles/contact.module.css
+++ b/Styles/contact.module.css
@@ -201,11 +201,11 @@
   .twoColumnsContainer {
     flex-direction: column;
     align-items: stretch;
-    gap: 16px;
+    gap: 14px;
     width: 100%;
     max-width: 100%;
     margin: 0 auto;              
-    padding: 0 16px;               /* padding simétrico */
+    padding: 0 12px;               /* padding simétrico */
     box-sizing: border-box;        /* evitar overflow lateral */
   }
 
@@ -217,10 +217,10 @@
   .contactSection{
     display: grid;
     grid-template-columns: 44px 1fr;  
-    column-gap: 12px;
+    column-gap: 10px;
     row-gap: 6px;
     align-items: start;
-    margin: 0 0 22px 0;              
+    margin: 0 0 12px 0;              
   }
 
   .icon{
@@ -230,8 +230,19 @@
   
 
   .title{
-    font-size: 30px;
+    margin-top: 90px;
+    font-size: 20px;
   }
+
+  .title::after{
+  content:"";
+  display:block;
+  width:45px;
+  height:4px;
+  border-radius:4px;
+  background: linear-gradient(90deg, var(--brand), var(--brand-alt));
+}
+
 
   .iconBoxTitle,
   .iconBoxTitle2,
@@ -243,7 +254,8 @@
     line-height: 1.5;
     word-break: break-word;
     hyphens: auto;
-    font-size: 16px;
+    font-size: 12px;
+    margin-top: 6px;
   }
 
   .contactSection2{
