--- a/Styles/footer.module.css
+++ b/Styles/footer.module.css
@@ -16,6 +16,16 @@
         flex-direction: row;
     }
 
+    
+
+
+}
+
+
+@media (max-width: 700px){
+    .footer{
+        font-size: 12px;
+    }
 }
 
 .navegacion {
